refactor: refactors ContractMusicalChairsSuite
Signed-off-by: Ventsislav Stoevski <cordonahcodecraft@gmail.com>